3 Columnas en el home del mismo alto aunque varien los contenidos. Otros productos del home añadido al modulo de administracion.

--- a/app/assets/stylesheets/platensaweb.webflow.css
+++ b/app/assets/stylesheets/platensaweb.webflow.css
@@ -766,6 +766,7 @@ p {
 .destacados {
   width: 220px;
   font-family: futura-ptl, sans-serif;
+  font-size: 13px;
   color: black;
   font-weight: 100;
 }
