columnas de la seccion interna mas altas

--- a/app/views/refinery/pages/show.html.erb
+++ b/app/views/refinery/pages/show.html.erb
@@ -84,19 +84,19 @@
 </div>
 </div>
 <script language="javascript" type="text/javascript">
-var maximo=Math.max($("#left-col-superior-izquierdo").height(),$("#right-col-superior-derecho").height())+10;
+var maximo=Math.max($("#left-col-superior-izquierdo").height(),$("#right-col-superior-derecho").height())+25;
 $("#left-col-superior-izquierdo").height(maximo);
 $("#right-col-superior-derecho").height(maximo);
 
-var maximo=Math.max($("#left-col-medio-izquierdo").height(),$("#right-col-medio-derecho").height());
+var maximo=Math.max($("#left-col-medio-izquierdo").height(),$("#right-col-medio-derecho").height())+25;
 $("#left-col-medio-izquierdo").height(maximo);
 $("#right-col-medio-derecho").height(maximo);
 
-var maximo=Math.max($("#left-col-medio-izquierdo2").height(),$("#right-col-medio-derecho2").height());
+var maximo=Math.max($("#left-col-medio-izquierdo2").height(),$("#right-col-medio-derecho2").height())+25;
 $("#left-col-medio-izquierdo2").height(maximo);
 $("#right-col-medio-derecho2").height(maximo);
 
-var maximo=Math.max($("#left-col-inferior-izquierdo").height(),$("#right-col-inferior-derecho").height());
+var maximo=Math.max($("#left-col-inferior-izquierdo").height(),$("#right-col-inferior-derecho").height())+25;
 $("#left-col-inferior-izquierdo").height(maximo);
 $("#right-col-inferior-derecho").height(maximo);
 </script>
