--- a/app/assets/stylesheets/platensaweb.webflow.css
+++ b/app/assets/stylesheets/platensaweb.webflow.css
@@ -1498,3 +1498,13 @@ margin-bottom: 20px;
 border: 8px solid #235577;
 padding: 3px;
 }
+
+#producto2 {
+float: left;
+position: relative;
+left: 8%;
+margin-top: 20px;
+margin-bottom: 20px;
+border: 8px solid #235577;
+padding: 3px;
+}
